--- a/MRv.html
+++ b/MRv.html
@@ -41,6 +41,7 @@
                     <a href="">Action</a>
                     <a href="">Thriller</a>
                     <a href="">Comedy</a>
+                    <a href="#" class="about-link">About</a>
                 </nav>
 
                 <div class="search">
@@ -63,11 +64,61 @@
                 <button class="prev"><</button>
                 <button class="next">></button>
             </div>
-
             <div class="timeRunning"></div>
         </div>
+        <footer class="page-footer">
+            <div class="footer-credit">
+                Made with 💖 by HA$H and team
+            </div>
+        </footer>
     </div>
-
+    <div id="aboutOverlay" class="about-overlay">
+        <div class="about-card">
+            <div class="about-card-content">
+                <div class="about-header">
+                    <h2>MRv - Movie Reviewed</h2>
+                    <span class="close-about">&times;</span>
+                </div>
+                <div class="about-body">
+                    <div class="about-section website-info">
+                        <h3>About MRv</h3>
+                        <p>MRv (Movie Reviewed) is an intelligent movie recommendation platform designed to revolutionize your entertainment experience. Our cutting-edge algorithm curates personalized movie suggestions by analyzing your viewing preferences and current trends.</p>
+                    </div>
+                    
+                    <div class="about-section content-source">
+                        <h3>Content Source</h3>
+                        <p>Our movie database is dynamically fetched from Netflix's extensive library. By leveraging Netflix's comprehensive movie collection, we provide real-time, up-to-date recommendations across multiple genres.</p>
+                        <ul class="content-features">
+                            <li>Real-time movie data</li>
+                            <li>Multiple genre selections</li>
+                            <li>Personalized recommendations</li>
+                        </ul>
+                    </div>
+                    
+                    <div class="about-section developer-info">
+                        <h3>Developer</h3>
+                        <div class="developer-details">
+                            <div class="developer-text">
+                                <h4>Harshit Singh Patel</h4>
+                                <p>B-Tech CSE AI 1st Year</p>
+                                <p>Passionate about creating innovative web experiences and leveraging artificial intelligence to enhance user interactions.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mobile-restriction-overlay">
+        <div class="loading-logo">MRv</div>
+        <div class="restriction-message">
+            Immerse Yourself in Cinematic Wonders
+        </div>
+        <div class="restriction-description">
+            To enjoy the full MRv experience, please open this site on a larger screen device. 
+            Our carefully crafted interface is optimized for desktop viewing.
+        </div>
+    </div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
